--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
+    "express-winston": "^4.2.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
